name:                vulkan
version:             0.1.0.0
synopsis:            Bindings to the Vulkan graphics API.
description:         Please see readme.md
homepage:            http://github.com/expipiplus1/vulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          live.long.and.prosper@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Graphics
build-type:          Simple
extra-source-files:  readme.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vulkan
  build-depends:       base >= 4.9 && < 5
                     , fixed-vector >= 0.8 && < 0.9
  default-language:    Haskell2010
  ghc-options:         -freduction-depth=0

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan
