name:                vulkan
version:             1.5.0.0
synopsis:            Bindings to the Vulkan graphics API.
description:         Please see readme.md
homepage:            http://github.com/expipiplus1/vulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          live.long.and.prosper@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Graphics
build-type:          Simple
extra-source-files:  readme.md,
                     changelog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Vulkan
                     , Graphics.Vulkan.Buffer
                     , Graphics.Vulkan.BufferView
                     , Graphics.Vulkan.CommandBuffer
                     , Graphics.Vulkan.CommandBufferBuilding
                     , Graphics.Vulkan.CommandPool
                     , Graphics.Vulkan.Constants
                     , Graphics.Vulkan.Core
                     , Graphics.Vulkan.DescriptorSet
                     , Graphics.Vulkan.Device
                     , Graphics.Vulkan.DeviceInitialization
                     , Graphics.Vulkan.Event
                     , Graphics.Vulkan.ExtensionDiscovery
                     , Graphics.Vulkan.Fence
                     , Graphics.Vulkan.Image
                     , Graphics.Vulkan.ImageView
                     , Graphics.Vulkan.KHR.Surface
                     , Graphics.Vulkan.LayerDiscovery
                     , Graphics.Vulkan.Memory
                     , Graphics.Vulkan.MemoryManagement
                     , Graphics.Vulkan.OtherTypes
                     , Graphics.Vulkan.Pass
                     , Graphics.Vulkan.Pipeline
                     , Graphics.Vulkan.PipelineCache
                     , Graphics.Vulkan.PipelineLayout
                     , Graphics.Vulkan.Query
                     , Graphics.Vulkan.Queue
                     , Graphics.Vulkan.QueueSemaphore
                     , Graphics.Vulkan.Sampler
                     , Graphics.Vulkan.Shader
                     , Graphics.Vulkan.SparseResourceMemoryManagement
                     , Graphics.Vulkan.Version
  build-depends:       base >= 4.9 && < 5
                     , vector-sized >= 0.1 && < 0.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan
