name:                generate
version:             0.2.1.0
synopsis:            A program to generate the vulkan package from the vulkan docs.
description:         Please see README.md
homepage:            http://github.com/expipiplus1/vulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          generator.i.ardly.know.er@monoid.al
copyright:           2015 Joe Hermaszewski
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable generate
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parse.Bitmask
                     , Parse.CType
                     , Parse.Command
                     , Parse.Constant
                     , Parse.Platform
                     , Parse.Copyright
                     , Parse.Enum
                     , Parse.Extension
                     , Parse.Section
                     , Parse.Spec
                     , Parse.State
                     , Parse.Tag
                     , Parse.Type
                     , Parse.Utils
                     , Parse.VendorID
                     , Spec.Bitmask
                     , Spec.Command
                     , Spec.Constant
                     , Spec.Enum
                     , Spec.Extension
                     , Spec.ExtensionTag
                     , Spec.Graph
                     , Spec.Partition
                     , Spec.Platform
                     , Spec.Section
                     , Spec.Spec
                     , Spec.StripExtensions
                     , Spec.Tag
                     , Spec.Type
                     , Spec.TypeEnv
                     , Spec.VendorID
                     , Write.Command
                     , Write.Constant
                     , Write.CycleBreak
                     , Write.Enum
                     , Write.Header
                     , Write.Module
                     , Write.Quirks
                     , Write.Spec
                     , Write.Type.Base
                     , Write.Type.Bitmask
                     , Write.Type.Define
                     , Write.Type.FuncPointer
                     , Write.Type.Handle
                     , Write.Type.Struct
                     , Write.TypeConverter
                     , Write.Utils
                     , Write.Vertex
                     , Write.WriteMonad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.8 && < 4.11
                     , control-bool >= 0.2.1
                     , cpphs >= 1.19 && < 1.21
                     , directory >= 1.2 && < 1.4
                     , extra
                     , filepath >= 1.4 && < 1.5
                     , hashable >= 1.2 && < 1.3
                     , haskell-src-exts
                     , haskell-src-exts-simple
                     , hxt >= 9.3 && < 9.4
                     , inline-c >= 0.5 && < 0.7
                     , interpolatedstring-perl6 >= 1.0 && < 1.1
                     , mtl >= 2.2.1 && < 2.3
                     , parsers >= 0.12 && < 0.13
                     , prettyprinter
                     , regex-tdfa >= 1.2 && < 1.3
                     , safe >= 0.3 && < 0.4
                     , split >= 0.2 && < 0.3
                     , template-haskell
                     , text
                     , transformers >= 0.4.2 && < 0.6
                     , trifecta >= 1.5 && < 1.8
                     , unordered-containers >= 0.2 && < 0.3
                     , wl-pprint-text >= 1.1 && < 1.2
                     , containers
                     , data-default
                     , either
                     , multimap
                     , pandoc
                     , parsec
                     , pretty-show
                     , say
                     , text
                     , typed-process
                     , regex-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan
