name:                generate
version:             0.2.1.0
synopsis:            A program to generate the vulkan package from the vulkan docs.
description:         Please see README.md
homepage:            http://github.com/expipiplus1/vulkan#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          generator.i.ardly.know.er@monoid.al
copyright:           2015 Joe Hermaszewski
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable generate
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Control.Monad.Fix.Extra
                     , Data.Closure
                     , Data.List.Extra2
                     , Data.MultiMap.Extra
                     , Data.Text.Extra
                     , Documentation
                     , Documentation.All
                     , Documentation.Haddock
                     , Documentation.RunAsciiDoctor
                     , Parse.Bitmask
                     , Parse.Command
                     , Parse.Constant
                     , Parse.Copyright
                     , Parse.Enum
                     , Parse.Extension
                     , Parse.Feature
                     , Parse.Platform
                     , Parse.Spec
                     , Parse.Tag
                     , Parse.Type
                     , Parse.Utils
                     , Parse.VendorID
                     , Spec.Bitmask
                     , Spec.Command
                     , Spec.Constant
                     , Spec.Enum
                     , Spec.Extension
                     , Spec.ExtensionTag
                     , Spec.Feature
                     , Spec.Platform
                     , Spec.Savvy.APIConstant
                     , Spec.Savvy.Alias
                     , Spec.Savvy.BaseType
                     , Spec.Savvy.Command
                     , Spec.Savvy.Define
                     , Spec.Savvy.Enum
                     , Spec.Savvy.Enum.Extension
                     , Spec.Savvy.Error
                     , Spec.Savvy.Extension
                     , Spec.Savvy.Feature
                     , Spec.Savvy.FuncPointer
                     , Spec.Savvy.Handle
                     , Spec.Savvy.HeaderVersion
                     , Spec.Savvy.Platform
                     , Spec.Savvy.Preprocess
                     , Spec.Savvy.Spec
                     , Spec.Savvy.Struct
                     , Spec.Savvy.Type
                     , Spec.Savvy.Type.Haskell
                     , Spec.Savvy.Type.Packing
                     , Spec.Savvy.TypeAlias
                     , Spec.Spec
                     , Spec.Tag
                     , Spec.Type
                     , Spec.VendorID
                     , System.ProgressBar
                     , Text.InterpolatedString.Perl6.Unindented
                     , Write.Alias
                     , Write.BaseType
                     , Write.Bespoke
                     , Write.Cabal
                     , Write.Command
                     , Write.Constant
                     , Write.ConstantExtension
                     , Write.Element
                     , Write.EnumExtension
                     , Write.Handle
                     , Write.HeaderVersion
                     , Write.Loader
                     , Write.Marshal.Aliases
                     , Write.Marshal.Bracket
                     , Write.Marshal.Exception
                     , Write.Marshal.Handle
                     , Write.Marshal.Monad
                     , Write.Marshal.SomeVkStruct
                     , Write.Marshal.Struct
                     , Write.Marshal.Struct.Utils
                     , Write.Marshal.Util
                     , Write.Marshal.Wrap
                     , Write.Module
                     , Write.Module.Aggregate
                     , Write.Partition
                     , Write.Seed
                     , Write.Spec
                     , Write.Struct
                     , Write.Type.Enum
                     , Write.Type.FuncPointer
                     , Write.Util
                     , Write.Wrapper
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.8
                     , control-bool >= 0.2.1
                     , directory >= 1.2
                     , extra
                     , filepath >= 1.4
                     , haskell-src-exts-simple
                     , hxt >= 9.3
                     , inline-c >= 0.5
                     , interpolatedstring-perl6 >= 1.0
                     , mtl >= 2.2.1
                     , prettyprinter
                     , safe >= 0.3
                     , template-haskell
                     , text
                     , transformers >= 0.4.2
                     , unordered-containers
                     , containers
                     , strict
                     , data-default
                     , ascii-progress
                     , async-pool
                     , either
                     , multimap
                     , pandoc
                     , pandoc-types
                     , parsec
                     , pretty-show
                     , say
                     , text
                     , typed-process
                     , regex-applicative
                     , hpp
                     , inflections
                     , exceptions
                     , control-bool
                     , filemanip
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/vulkan
